# Raytracing

./: CMakeLists.txt  Camara.cpp  Camara.h  Luz.h  LuzEsfera.cpp  LuzEsfera.h  LuzPunto.cpp  LuzPunto.h  Material.cpp  Material.h  Mundo.cpp  Mundo.h  PlanoVista.cpp  README.md  ShadeRec.cpp  ShadeRec.h  Tracer.cpp  Vector3D.h  main.cpp
Geometria/: Caja.cpp  Caja.h  Cilindro.cpp  Cilindro.h  Disco.cpp  Disco.h  Esfera.cpp  Esfera.h  Objeto.cpp  Objeto.h  Plano.cpp  Plano.h
Luces/: Luz.h  LuzEsfera.cpp  LuzEsfera.h  LuzPunto.cpp  LuzPunto.h
Materiales/: Emisor.cpp  Emisor.h  Material.h  Matte.cpp  Matte.h  Phong.cpp  Phong.h  Reflective.cpp  Reflective.h  Transparent.cpp  Transparent.h
Utils/: PlanoVista.h  Rayo.h  ShadeRec.h  Tracer.h  Vector3D.h
